--- a/2006.html
+++ b/2006.html
@@ -38,7 +38,31 @@
           </div>
         </div>
       </nav>
-    <h1>founding</h1>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <h1>founding</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-3">
+          Column
+        </div>
+        <div class="col-6">
+          <img src="https://miro.medium.com/max/1400/1*bV-jgB-xdTCzS-1PXdN_KA.jpeg">
+        </div>
+        <div class="col-3">
+          Column
+        </div>
+      </div>
+    </div>
+    <div class="container-footer">
+      <div class="row">
+        <div class="col">
+          
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
 </html>
