--- a/2015-2018.html
+++ b/2015-2018.html
@@ -38,7 +38,24 @@
           </div>
         </div>
       </nav>
-    <h1>revenue growth</h1>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <h1>revenue growth</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-3">
+          Column
+        </div>
+        <div class="col-6">
+          <img src="https://d26eb5y2jukpbz.cloudfront.net/ebs/archive/2019/large/OS_IN19002G_12.jpg">
+        </div>
+        <div class="col-3">
+          Column
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
 </html>
