--- a/2011.html
+++ b/2011.html
@@ -46,13 +46,37 @@
       </div>
       <div class="row">
         <div class="col-3">
-          Column
+          column
         </div>
         <div class="col-6">
           <img src="https://www.wired.com/images_blogs/business/2011/07/spotify-us.jpg">
         </div>
         <div class="col-3">
-          Column
+          column
+        </div>
+      </div>
+    </div>
+    <div class="container-footer">
+      <div class="row">
+        <div class="col">
+        <table class="table" border="2px" align="center">
+          <thead>
+          <tr>
+            <th>founding</th>
+            <th>public launch</th>
+            <th>licensing deals</th>
+            <th>problems</th>
+            <th>revenue growth</th>
+          </tr>
+          </thead>
+          <tr>
+            <td>2006</td>
+            <td>2008</td>
+            <td>2011</td>
+            <td>2014</td>
+            <td>2015-2018</td>
+          </tr>
+        </table>
         </div>
       </div>
     </div>
