--- a/2006.html
+++ b/2006.html
@@ -59,7 +59,24 @@
     <div class="container-footer">
       <div class="row">
         <div class="col">
-          
+        <table class="table" border="2px" align="center">
+          <thead>
+          <tr>
+            <th>founding</th>
+            <th>public launch</th>
+            <th>licensing deals</th>
+            <th>problems</th>
+            <th>revenue growth</th>
+          </tr>
+          </thead>
+          <tr>
+            <td>2006</td>
+            <td>2008</td>
+            <td>2011</td>
+            <td>2014</td>
+            <td>2015-2018</td>
+          </tr>
+        </table>
         </div>
       </div>
     </div>
