--- a/2015-2018.html
+++ b/2015-2018.html
@@ -56,6 +56,30 @@
         </div>
       </div>
     </div>
+    <div class="container-footer">
+      <div class="row">
+        <div class="col">
+        <table class="table" border="2px" align="center">
+          <thead>
+          <tr>
+            <th>founding</th>
+            <th>public launch</th>
+            <th>licensing deals</th>
+            <th>problems</th>
+            <th>revenue growth</th>
+          </tr>
+          </thead>
+          <tr>
+            <td>2006</td>
+            <td>2008</td>
+            <td>2011</td>
+            <td>2014</td>
+            <td>2015-2018</td>
+          </tr>
+        </table>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
 </html>
