--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         </div>
       </nav>
     <h1>spotify</h1>
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div class="container-fluid" align="center">
+      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="https://www.webdesignmuseum.org/uploaded/timeline/spotify/spotify-2011-preview.png" width="500" height="300">
@@ -60,7 +61,8 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <div class="container text-center">
+    </div>
+      <div class="container-fluid text-center">
         <div class="row">
           <div class="col">
             <h2>founding</h2>
