--- a/2008.html
+++ b/2008.html
@@ -52,7 +52,18 @@
           <img src="https://miro.medium.com/max/1400/1*P-2ZTbgcQzL2bX3RDKTsuA.jpeg">
         </div>
         <div class="col-3">
-          
+        </div>
+        
+        <div class="col-3">
+        </div>
+        <div class="col-6">
+          <p>
+            ....
+          </p>
+        </div>
+        <div class="col-3">
+        </div>
+
         </div>
       </div>
     </div>
