--- a/2011.html
+++ b/2011.html
@@ -52,7 +52,18 @@
           <img src="https://www.wired.com/images_blogs/business/2011/07/spotify-us.jpg">
         </div>
         <div class="col-3">
-          
+        </div>
+        
+        <div class="col-3">
+        </div>          
+        <div class="col-6">
+          <p>
+            .... 
+          </p>
+        </div>
+        <div class="col-3">
+        </div>
+
         </div>
       </div>
     </div>
