--- a/2014.html
+++ b/2014.html
@@ -52,7 +52,18 @@
           <img src="https://cdn.vox-cdn.com/uploads/chorus_asset/file/2831390/desktop-your-music-albums.1396401072.png">
         </div>
         <div class="col-3">
-          
+        </div>
+      
+        <div class="col-3">
+        </div>
+        <div class="col-6">
+          <p>
+            ....
+          </p>
+        </div>
+        <div class="col-3">
+        </div>
+
         </div>
       </div>
     </div>
