--- a/2006.html
+++ b/2006.html
@@ -52,8 +52,18 @@
           <img src="https://miro.medium.com/max/1400/1*bV-jgB-xdTCzS-1PXdN_KA.jpeg">
         </div>
         <div class="col-3">
-         
         </div>
+
+        <div class="col-3">
+        </div>
+        <div class="col-6">
+          <p>
+            ....
+          </p>
+        </div>
+        <div class="col-3">
+        </div>
+
       </div>
     </div>
     <div class="container-footer">
