--- a/2006.html
+++ b/2006.html
@@ -53,15 +53,19 @@
         </div>
         <div class="col-3">
         </div>
-
-        <div class="col-3">
+        
+        <div class="col-1">
         </div>
-        <div class="col-6">
+        <div class="col-10">
           <p>
-            ....
+            The year 2006 brought about the founding of Spotify. Peer to peer sharing services like Napster had come to an end, and this brought about an opportunity for another music service to take its place. Two Swedish entrepreneurs, Daniel Ek and Martin Lorentzon, were driven to find a solution to this problem, while also making some kind of capital or business off users' need for a music service. Ek and Lorentzon realized that they needed to find some common ground between the two main services available already. Apple iTunes was up and running, but selling music by the track for, at most, $2. Napster was beloved by listeners, but it was very illegal and the company was running into legal and monetary issues. Ek and Lorentzon wanted to avoid the cons of the other music companies in order to make theirs the most efficient and loved. Ek stated, "I just really believe that if we create the right product, which is better than piracy, that people will come.” Spotify essentially just made a much better, and legal, Napster. Some features of Spotify that were an improvement from iTunes and Napster included music that was delivered instantaneously, audio that was high-quality, no need for downloads, and most importantly, it was all legal. Ek and Lorentzon worked hard to avoid the piracy aspect that Napster was built on, while also battling the ownership of physical media that iTunes had to offer. As Spotify was developed, it was first called Spotify AB. In just a mere four months, Ek and Lorentzon were able to build a working prototype. 
           </p>
+          <ul>
+            <li><a href="https://producthabits.com/how-spotify-built-a-20-billion-business-by-changing-how-people-listen-to-music/#:~:text=Development%20of%20Spotify%E2%80%99s%20initial%20product%2C%20which%20was%20known,in%202007%2C%20Spotify%20AB%20went%20into%20closed%20beta.">"How Spotify Built a $20 Billion Business by Changing How People Listen to Music"</a></li>
+            <li><a href="https://www.reuters.com/article/us-spotify-ipo-timeline/timeline-spotifys-winding-road-from-outsider-to-music-industry-ally-idUSKCN1HA1MB">"Timeline: Spotify's winding road from outsider to music industry ally"</a></li>
+          </ul>
         </div>
-        <div class="col-3">
+        <div class="col-1">
         </div>
 
       </div>
