--- a/2008.html
+++ b/2008.html
@@ -54,14 +54,19 @@
         <div class="col-3">
         </div>
         
-        <div class="col-3">
+        <div class="col-1">
         </div>
-        <div class="col-6">
+        <div class="col-10">
           <p>
-            ....
+            On October 7th, 2008, Spotify finally launched, making it accessible to some music listeners for free. The reason it was available for some was because it started off being only accessible to those with an invite code. Spotify's success in building a user base can be attributed to contacting influential music bloggers in Sweden. Through these bloggers, Spotify found its initial users. This proved to be a success as the users who tested the beta version were dazzled by Spotify's quality at such an early stage in development. In merely a year, Spotify had been built up well enough for influential people to start promoting it. In two years, they had managed to raise roughly $85 million, which made better hiring the best technical talent possible. Finding this talent was far from hard, as the product got so popular before its release. Spotify took their time in perfecting their product, and then offered it on a smaller scale first. This method helped close in on better product development and led to more gradual growth. When Spotify did finally become available to the users with the invite code, they had the option of free listening or paying for a subscription. Although there was a free version, it had advertising. This was mostly to incentivize users to upgrade to the version of Spotify where they pay £10 a month for the subscription featuring an advertisement free listening experience. Spotify's largest success came from an agreement with America's "Big Four" in music: EMI, Sony, Universal, and Warner Music. This was due to the world's decrease in revenue in the music industry. By making their catalogs available to Spotify's use outside of the US, everyone was able to benefit. 
           </p>
+          <ul>
+            <li><a href="https://www.bbc.com/news/newsbeat-43240886">How Spotify came to be worth billions</a></li>
+            <li><a href="https://www.mirror.co.uk/tech/history-spotify-how-swedish-streaming-12291542">History of Spotify: how the Swedish streaming company changed the music industry</a></li>
+            <li><a href="https://producthabits.com/how-spotify-built-a-20-billion-business-by-changing-how-people-listen-to-music/#:~:text=How%20Spotify%20Built%20a%20%2420%20Billion%20Business%20by,by%20the%20Recording%20Industry%20Association%20of%20America%E2%80%99s%20lawyers.">How Spotify Built a $20 Billion Business by Changing How People Listen to Music</a></li>
+          </ul>
         </div>
-        <div class="col-3">
+        <div class="col-1">
         </div>
 
         </div>
