--- a/2006.html
+++ b/2006.html
@@ -26,13 +26,13 @@
                 <a class="nav-link" href="2008.html">public launch</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="2011.html">licensing deals</a>
+                <a class="nav-link" href="2011.html">making it to america</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="2014.html">problems</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="2015-2018.html">revenue growth</a>
+                <a class="nav-link" href="2015-2018.html">seeing success</a>
               </li>
             </ul>
           </div>
@@ -78,9 +78,9 @@
           <tr>
             <th>founding</th>
             <th>public launch</th>
-            <th>licensing deals</th>
+            <th>making it to america</th>
             <th>problems</th>
-            <th>revenue growth</th>
+            <th>seeing success</th>
           </tr>
           </thead>
           <tr>
