--- a/2011.html
+++ b/2011.html
@@ -26,13 +26,13 @@
                 <a class="nav-link" href="2008.html">public launch</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="2011.html">licensing deals</a>
+                <a class="nav-link active" href="2011.html">making it to america</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="2014.html">problems</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="2015-2018.html">revenue growth</a>
+                <a class="nav-link" href="2015-2018.html">seeing success</a>
               </li>
             </ul>
           </div>
@@ -41,7 +41,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <h1>licensing</h1>
+          <h1>making it to america</h1>
         </div>
       </div>
       <div class="row">
@@ -54,14 +54,17 @@
         <div class="col-3">
         </div>
         
-        <div class="col-3">
+        <div class="col-1">
         </div>          
-        <div class="col-6">
+        <div class="col-10">
           <p>
-            .... 
+            By 2011, Spotify's catalog housed around 10 million tracks. At this time, Spotify also had more than a million fans across 7 countries in Europe and $100 million. The realization came that Spotify needed to move its user base to America and not just keep it restricted to Europe. Spotify wanted to keep its exclusivity aspect, which had proven successful in Europe, to advertise in America. Some partners that helped launch Spotify in America included Chevrolet, Coca-Cola, Motorola, Reebok, and Sprite just to name a few. The success didn't necessarily come from being partners with such huge American brands. It was still the promotional methods Spotify used to attract their users. Spotify ran ads for these partners, in exchange for the brands to give their customers the invite only codes. This also meant there wasn't a plateau in growth, rather it was staggered. First was the invite code users while Spotify built the hype around their product. 2011 also saw the integration of Spotify with Facebook. This upped Spotify's status as the leading music platform of the social network. Seeing the amount of users on Facebook that also used Spotify due to the new feature lead to even bigger gains for Spotify. After seeing the popularity that stemmed from this, Spotify knew just how much people would be willing to pay to listen to that music. Integrating Facebook and Spotify also meant users could skip the process of making a separate account for Spotify, making the appeal for Spotify better. 
           </p>
+          <ul>
+            <li><a href="https://producthabits.com/how-spotify-built-a-20-billion-business-by-changing-how-people-listen-to-music/">How Spotify Built a $20 Billion Business by Changing How People Listen to Music</a></li>
+          </ul>
         </div>
-        <div class="col-3">
+        <div class="col-1">
         </div>
 
         </div>
@@ -75,9 +78,9 @@
           <tr>
             <th>founding</th>
             <th>public launch</th>
-            <th>licensing deals</th>
+            <th>making it to america</th>
             <th>problems</th>
-            <th>revenue growth</th>
+            <th>seeing success</th>
           </tr>
           </thead>
           <tr>
