--- a/2014.html
+++ b/2014.html
@@ -26,13 +26,13 @@
                 <a class="nav-link" href="2008.html">public launch</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="2011.html">licensing deals</a>
+                <a class="nav-link" href="2011.html">making it to america</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="2014.html">problems</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="2015-2018.html">revenue growth</a>
+                <a class="nav-link" href="2015-2018.html">seeing success</a>
               </li>
             </ul>
           </div>
@@ -54,14 +54,20 @@
         <div class="col-3">
         </div>
       
-        <div class="col-3">
+        <div class="col-1">
         </div>
-        <div class="col-6">
+        <div class="col-10">
           <p>
-            ....
+            Spotify had no shortage of issues in 2014. One of the main issues stemmed from their free and paid products. Offering a paid product when they had one for free led to users drifting more towards the free alternative. There were also many free ways to listen to music at the time including Youtube, radio, and piracy. Spotify, however, did improve their free version in 2014 by removing the time limits accounts had. At first, accounts that were free were restricted to 20 hours of listening a month. This was to incentivize them into upgrading to the monthly subscription, but the realization that there were alternatives led to the removal of this limitation. Another huge issue for Spotify came in the form of finances. When number of users rises, so does the upkeep cost of the platform. Despite revenue increasing, annual loses mounted. 2014 saw Spotify paying more than $2 billion in revenue to artists. Revenue not only became a problem for Spotify's pockets, but for the artists who got paid royalties for their work being on Spotify. The way Spotify paid these royalties led to artists getting almost no money from having their work on the platform. According to Time Magazine, "Artists earn on average less than one cent per play, between $0.006 and $0.0084, to be exact, according to Spotify Artists, a website that explains the service to artists". Many famous artists may have been gaining a profit, but other smaller artists were at a disadvantage. In 2014, Taylor Swift stated, "I'm not willing to contribute my life's work to an experiment that I don't feel fairly compensates the writers, producers, artists, and creators of this music," following the removal of her music from Spotify. Swift spoke very openly about how artists should not demote their hard work and life's stories to this level of compensation. Since, Swift has put her music back on the platform (thank goodness.)
           </p>
+          <ul>
+            <li><a href="https://www.mirror.co.uk/tech/history-spotify-how-swedish-streaming-12291542">History of Spotify: how the Swedish streaming company changed the music industry</a></li>
+            <li><a href="https://www.bbc.com/news/newsbeat-43240886">How Spotify came to be worth billions</a></li>
+            <li><a href="https://producthabits.com/how-spotify-built-a-20-billion-business-by-changing-how-people-listen-to-music/">How Spotify Built a $20 Billion Business by Changing How People Listen to Music</a></li>
+            <li><a href="https://time.com/3554468/why-taylor-swift-spotify/">Here's Why Taylor Swift Pulled Her Music From Spotify</a></li>
+          </ul>
         </div>
-        <div class="col-3">
+        <div class="col-1">
         </div>
 
         </div>
@@ -75,9 +81,9 @@
           <tr>
             <th>founding</th>
             <th>public launch</th>
-            <th>licensing deals</th>
+            <th>making it to america</th>
             <th>problems</th>
-            <th>revenue growth</th>
+            <th>seeing success</th>
           </tr>
           </thead>
           <tr>
