--- a/2015-2018.html
+++ b/2015-2018.html
@@ -26,13 +26,13 @@
                 <a class="nav-link" href="2008.html">public launch</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="2011.html">licensing deals</a>
+                <a class="nav-link" href="2011.html">making it to america</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="2014.html">problems</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="2015-2018.html">revenue growth</a>
+                <a class="nav-link active" href="2015-2018.html">seeing success</a>
               </li>
             </ul>
           </div>
@@ -41,7 +41,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <h1>revenue growth</h1>
+          <h1>seeing success</h1>
         </div>
       </div>
       <div class="row">
@@ -54,14 +54,19 @@
         <div class="col-3">
         </div>
         
-        <div class="col-3">
+        <div class="col-1">
         </div>          
-        <div class="col-6">
+        <div class="col-10">
           <p>
-            .....
+            2015 saw a huge turn around for Spotify, especially after their troublesome previous year. Now, Spotify was one of the most powerful music companies in the world. New features like specially curated playlists and recommendations for users. A Year In Music, now known as Spotify Wrapped, used statistics of user's past year to give the user's a way to look back at their listening patterns. One of these features included Discover Weekly, which created a new playlist every Monday based on the user's listening patterers and habits. This attracted 40 million new users to Spotify. Seeing the success with Discover Weekly, Spotify invested more money into their product in order to be able to provide more specially curated playlists based on user's activities. One other feature was Release Radar, which was released in 2016. Release Radar featured around 2 hours of music for users that are by their most listened to artists. This  was yet another way Spotify added a stronger sense of personality that other platforms didn't have. 2017 brought another personalized feature to users, Time Capsule. This playlist was used by users 16+, as it featured songs from their tweens and twenties. August 2017 saw the completion of negotiations with Warner Music Group, which renewed their global licensing partnership. This was the last thing in Spotify's way before they could become a publicly traded company. February 28, 2018 was the day Spotify filed a direct listing on the New York Stock Exchange, going public on April 3, 2018. 
           </p>
+          <ul>
+            <li><a href="https://www.reuters.com/article/us-spotify-ipo-timeline/timeline-spotifys-winding-road-from-outsider-to-music-industry-ally-idUSKCN1HA1MB">Timeline: Spotify's winding road from outsider to music industry ally</a></li>
+            <li><a href="https://producthabits.com/how-spotify-built-a-20-billion-business-by-changing-how-people-listen-to-music/">How Spotify Built a $20 Billion Business by Changing How People Listen to Music</a></li>
+            <li><a href="https://www.vox.com/culture/22814121/spotify-wrapped-2021-algorithm-data-privacy">Spotify Wrapped, unwrapped</a></li>
+          </ul>
         </div>
-        <div class="col-3">
+        <div class="col-1">
         </div>
 
         </div>
@@ -75,9 +80,9 @@
           <tr>
             <th>founding</th>
             <th>public launch</th>
-            <th>licensing deals</th>
+            <th>making it to america</th>
             <th>problems</th>
-            <th>revenue growth</th>
+            <th>seeing success</th>
           </tr>
           </thead>
           <tr>
